Fix vertical alignment for select caret

--- a/src/components/Select/select.scss
+++ b/src/components/Select/select.scss
@@ -31,7 +31,6 @@
       color: $muted;
     }
     .dz-select-caret-container {
-      align-self: flex-end;
       width: 1.875rem;
       padding: 0.3125rem;
       position: relative;
